--- a/style.css
+++ b/style.css
@@ -526,8 +526,8 @@ section {
 }
 
 .banner {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 17, 17, 0.7)), to(rgba(17, 17, 17, 0.7))), url(../banner-bg.jpg) no-repeat;
-  background: linear-gradient(rgba(17, 17, 17, 0.7), rgba(17, 17, 17, 0.7)), url(../banner-bg.jpg) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 17, 17, 0.7)), to(rgba(17, 17, 17, 0.7))), url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg19U1Ifkaqs5CS2L7nYNd5YJkp2aFtSmGgXYPfiSEwVn7HZRgcSdUmKhIEYuysJOe4epeOC9x-oNYAQFQqvdBYjNSWLMX1UmTSGM_zmdVHGoxayynWDsoWIxIJ012UnAoM-xKn71U5tZBf_pTA0vumy1ZwBCN9tSIJQWcuYD4ewuL32lp-NWluHOarm4Q/s1880/banner-bg.jpg) no-repeat;
+  background: linear-gradient(rgba(17, 17, 17, 0.7), rgba(17, 17, 17, 0.7)), url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg19U1Ifkaqs5CS2L7nYNd5YJkp2aFtSmGgXYPfiSEwVn7HZRgcSdUmKhIEYuysJOe4epeOC9x-oNYAQFQqvdBYjNSWLMX1UmTSGM_zmdVHGoxayynWDsoWIxIJ012UnAoM-xKn71U5tZBf_pTA0vumy1ZwBCN9tSIJQWcuYD4ewuL32lp-NWluHOarm4Q/s1880/banner-bg.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   padding: 3rem 2rem;
